--- a/resume.qmd
+++ b/resume.qmd
@@ -54,7 +54,7 @@ toc: false
 :::
 
 :::{.teal-bg}
-<p class="custom-h2-light" id="skills">Skills</p>
+<p class="custom-h2-light" id="skills">Technical Skills</p>
 ```{r echo=FALSE,message=FALSE, warning=FALSE}
 library(tibble)
 library(ggplot2)
@@ -74,11 +74,13 @@ skills_dat <- tribble(
   "R", 5, "3 years of experience. Fluent\nin tidyverse, tidymodels, sf, terra,\nraster, Shiny, etc.",
   "Python", 3, "1 year of experience with\nnumpy, pandas, matplotlib.",
   "SQL", 3, "Academic experience creating\nschemas and writing queries.", 
+  "CSS", 2, "Some experience using CSS to\nstyle this website.",
+  "HTML", 2, "Some experience using HTML to\nstyle this website.",
   "Bash", 1, "Knowledge of basic bash commands.",
   "Microsoft Office", 5, "10 years of experience using\nPowerPoint, Excel, Word",
   "Git/GitHub", 4, "1 year of experience with creating\nrepositories, forking, cloning, pushing,\npulling, branches, pull requests, issues, projects,\nand trouble-shooting merge conflicts.",
   "GEE", 3, "Academic experience retrieving,\nselecting/filtering, and visualizing\nGEE data.",
-  "ArcGIS Pro", 2, "Coursera and Esri coursework experience in\nloading, prepping, visualizing spatial data.\nFamiliar with attribute tables, geoprocessing\ntools, charts, symbology. Currently enrolled\nin Esri's Spatial Data Science MOOC.",
+  "ArcGIS Pro", 3, "Coursera and Esri coursework experience in\nloading, prepping, visualizing spatial data.\nFamiliar with attribute tables, geoprocessing\ntools, charts, symbology. Completed Esri's\nSpatial Data Science MOOC.",
   "Tableau", 1, "Knowledge of loading data in\nTableau. Conceptual familiarity with\n Tableau's strengths."
 ) %>%
   mutate(level = level + 2) %>% 
