longer gallery banner image

--- a/gallery.qmd
+++ b/gallery.qmd
@@ -5,7 +5,7 @@ toc: false
 
 <!-- Image banner at top -->
 <div class="banner-container">
- <img class="banner-image-two" src="images/flowers.png" alt="Ocean waves"/>
+ <img class="banner-image-two" src="images/flowers-long.png" alt="Ocean waves"/>
  <div class="left-banner-box">
  <p class="custom-h1-light" style="margin-bottom: 0px">Gallery</p>
  </div>
